# kodik-parser

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml  rust-clippy.yml  rust.yml
kodik/: Cargo.toml  README.md
kodik-parser/: Cargo.toml  README.md
kodik-parser/src/: async_impl.rs  blocking.rs  cache.rs  decoder.rs  error.rs  lib.rs  parser.rs  scraper.rs  state.rs  util.rs
kodik-parser/src/async_impl/: parser.rs  scraper.rs  util.rs
kodik-parser/src/blocking/: parser.rs  scraper.rs  util.rs
kodik-parser/src/tests/: decoder.rs  mod.rs  parser.rs  scraper.rs
kodik-rs/: Cargo.toml  README.md
kodik-rs/src/: cache.rs  config.rs  lib.rs  logging.rs  main.rs  shiki.rs
kodik-rs/src/tests/: cache.rs  mod.rs
kodik-shiki/: Cargo.toml
kodik-shiki/src/: anime.rs  error.rs  franchise.rs  lib.rs  parser.rs  related.rs  scraper.rs
kodik-shiki/src/models/: graphql_request.rs  kodik_api_response.rs  mod.rs  shared.rs  shiki_api_animes.rs  shiki_api_franchise.rs
kodik-shiki/src/tests/: mod.rs  parser.rs  scraper.rs
kodik-utils/: Cargo.toml
kodik-utils/src/: error.rs  lib.rs  re.rs  scraper.rs  ua.rs
kodik-utils/src/tests/: mod.rs  re.rs  ua.rs
kodik/src/: cache.rs  config.rs  lib.rs  logging.rs  main.rs
kodik/src/tests/: cache.rs  mod.rs
src/: async_impl.rs  blocking.rs  decoder.rs  error.rs  lib.rs  main.rs  parser.rs  scraper.rs  util.rs
src/async_impl/: parser.rs  scraper.rs
src/blocking/: parser.rs  scraper.rs
