[workspace]
members = ["kodik-rs","kodik-parser", "kodik-utils", "kodik-shiki"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
log = { version = "0.4.29", default-features = false }
tokio = { version = "1.50.0", default-features = false, features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", default-features = false, features = ["json","rustls","form"] }
base64 = "0.22.1"
lazy-regex = "3.6.0"
serde-saphyr = "0.0.23"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"
panic = "deny"

all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BatogiX/kodik"
homepage = "https://github.com/BatogiX/kodik"
documentation = "https://docs.rs/kodik-parser"
keywords = ["rust", "library", "kodik", "parser"]
categories = ["api-bindings"]
readme = "README.md"
