[workspace]
members = [
    "kodik-rs",
    "kodik-parser",
    "kodik-utils",
    "kodik-shiki",
    "kodik-mpv-plugin",
]
resolver = "3"

[workspace.dependencies]
# members
kodik-parser = { version = "3", path = "kodik-parser" }
kodik-shiki = { version = "0.1", path = "kodik-shiki" }
kodik-utils = { version = "0.1", path = "kodik-utils" }

# members deps
ua_generator = "0.5"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1.52", features = ["macros"] }
serde_json = "1.0"
reqwest = "0.13"
base64 = "0.22"
lazy-regex = "3.6"
serde-saphyr = "0.0.26"
arc-swap = "1.9"
clap = "4.6"
dirs = "6.0"
thiserror = "2.0"
mpv-client = { path = '..\mpv-client\mpv-client' }
anyhow = "1.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
expect_used = "warn"
unwrap_used = "warn"
panic = "warn"
multiple_crate_versions = "allow"
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BatogiX/kodik"
homepage = "https://github.com/BatogiX/kodik"
documentation = "https://docs.rs/kodik-parser"
keywords = ["rust", "library", "kodik", "parser"]
categories = ["api-bindings"]
readme = "README.md"
