[features]
default = []

[dependencies]
kodik-utils = { version = "0.1.0", path = "../kodik-utils" }

log.workspace = true
serde = { workspace = true, features = ["rc"] }
tokio.workspace = true
reqwest.workspace = true
base64.workspace = true
lazy-regex.workspace = true
regex-lite.workspace = true

arc-swap = { version = "1.9.1", default-features = false }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true

[package]
name = "kodik-parser"
version = "3.0.0"
description = "A Rust library for getting direct links to files from Kodik."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
