[package]
name = "kodik-parser"
version = "3.0.1"
edition.workspace = true
license.workspace = true
description = "Rust library for parsing direct links from Kodik"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
kodik-utils = { version = "0.1", path = "../kodik-utils" }
serde = { workspace = true, features = ["rc"] }
log.workspace = true
tokio.workspace = true
reqwest.workspace = true
base64.workspace = true
lazy-regex.workspace = true
arc-swap = { version = "1.9", default-features = false }

[dev-dependencies]
serde_json.workspace = true

[features]
default = []

[lints]
workspace = true
