[package]
name = "kodik-rs"
version = "0.1.4"
edition.workspace = true
license.workspace = true
description = "CLI tool for getting direct links to files from Kodik"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[[bin]]
name = "kodik"
path = "src/main.rs"

[dependencies]
kodik-parser = { version = "3", path = "../kodik-parser" }
kodik-shiki = { version = "0.1", path = "../kodik-shiki" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
dirs = { version = "6.0", default-features = false }
clap = { version = "4.6", features = ["derive", "color"] }

[lints]
workspace = true
