[package]
name = "kodik-rs"
version = "0.1.4"
edition.workspace = true
license.workspace = true
description = "CLI tool for getting direct links to files from Kodik"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[[bin]]
name = "kodik"
path = "src/main.rs"

[dependencies]
kodik-parser = { workspace = true }
kodik-shiki = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
reqwest = {workspace = true, features = ["cookies", "gzip", "brotli", "zstd", "deflate"]}
dirs = { workspace = true }
clap = { workspace = true, features = ["derive", "color"] }

[lints]
workspace = true
