[package]
name = "kodik-shiki"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust library for Shiki integration with Kodik"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
kodik-utils = { path = "../kodik-utils" }
lazy-regex.workspace = true
serde.workspace = true
log.workspace = true
reqwest.workspace = true
tokio.workspace = true

[lints]
workspace = true
