[package]
name = "kodik-utils"
version = "0.1.1"
edition.workspace = true
license.workspace = true
description = "Rust utilities library for Kodik"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
reqwest.workspace = true
base64.workspace = true
log.workspace = true
lazy-regex.workspace = true
thiserror = { version = "2.0", default-features = false }
ua_generator = { version = "0.5", default-features = false }

[lints]
workspace = true
