[package]
name = "kodik-utils"
version = "0.1.2"
edition.workspace = true
license.workspace = true
description = "Rust utilities library for Kodik"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
thiserror = { version = "2.0", default-features = false }
ua_generator = { version = "0.5", default-features = false }
reqwest.workspace = true
base64.workspace = true
log.workspace = true
lazy-regex.workspace = true
serde-saphyr.workspace = true
serde.workspace = true

[lints]
workspace = true
