[package]
name = "kodik-utils"
version = "0.1.2"
edition.workspace = true
license.workspace = true
description = "Rust utilities library for Kodik"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
thiserror = { workspace = true }
ua_generator = { workspace = true }
reqwest = { workspace = true, features = ["json", "form"] }
base64.workspace = true
log.workspace = true
lazy-regex.workspace = true
serde-saphyr.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["time"] }

[lints]
workspace = true
