[package]
name = "kodik"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BatogiX/kodik-parser"
homepage = "https://github.com/BatogiX/kodik-parser"
documentation = "https://docs.rs/kodik-parser"
keywords = ["rust", "library", "kodik", "parser"]
categories = ["api-bindings"]
readme = "README.md"
description = "A Rust library for getting direct links to files from Kodik."

[dependencies]
kodik-parser = { path = "../kodik-parser" }

serde_json.workspace = true
tokio.workspace = true
log.workspace = true
serde.workspace = true

dirs = { version = "6.0.0", default-features = false }
ctrlc = "3.5.2"
shared_child = "1.1.1"

[lints]
workspace = true
