[dependencies]
kodik-parser = { version = "3.0.0", path = "../kodik-parser" }

serde_json.workspace = true
tokio.workspace = true
log.workspace = true
serde.workspace = true

dirs = { version = "6.0.0", default-features = false }

[lints]
workspace = true

[package]
name = "kodik-rs"
version = "0.1.0"
description = "A Rust library for getting direct links to files from Kodik."
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
