[dependencies]
kodik-parser = { version = "3.0.0", path = "../kodik-parser" }
kodik-shiki = { version = "0.1.0", path = "../kodik-shiki" }

serde_json.workspace = true
tokio.workspace = true
log.workspace = true
serde.workspace = true

dirs = { version = "6.0.0", default-features = false }

[lints]
workspace = true

[package]
name = "kodik-rs"
version = "0.1.0"
description = "CLI written in Rust for getting direct links to files from Kodik"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
